--- a/css/main.css
+++ b/css/main.css
@@ -915,6 +915,7 @@ footer > .copyright{
   margin-bottom: 5px;
   cursor: pointer;
   transition: transform 0.25s ease-out;
+  background: rgba(0,0,0,0.07);
 }
 #gallery img:hover{
   transform: scale(1.01);
