--- a/css/main.css
+++ b/css/main.css
@@ -842,6 +842,7 @@ footer > .copyright{
   .card.preview{
     position: fixed;
     width: 100%; height: 100vh;
+    max-height: 100vh;
     z-index: 999;
     top: 0;left: 0;
     overflow-y:auto;
